Run/logs.txt
[2025-03-19 10:37:01] [DEBUG] [Logger.h:214] File 'VertexShaderTest.hlsl' was updated. Triggering callback.
[2025-03-19 10:37:08] [DEBUG] [Logger.h:214] File 'VertexShaderTest.hlsl' was updated. Triggering callback.
[2025-03-19 10:37:08] [ERROR] [Logger.h:214] Compilation failed:

VertexShaderTest.hlsl:3:15: error: expected ';' after return statement
    return pos
              ^
              ;
[2025-03-19 10:37:16] [DEBUG] [Logger.h:214] File 'VertexShaderTest.hlsl' was updated. Triggering callback.
